applications/second-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: second-app
spec:
  selector:
    app: second-app
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
